[project]
name = "pet-tracker"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.84.0",
    "peewee>=4.0.3",
]

[dependency-groups]
dev = [
    "flet-cli>=0.82.2",
    "flet-desktop>=0.82.2",
    "flet-web>=0.82.2",
]

[tool.flet]
org = "com.mycompany"
product = "pet-tracker"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"
assets_dir = "assets"

[tool.flet.app]
path = "src"
